# oceanlight

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
liboceanlight/: CMakeLists.txt  config.h.in
liboceanlight/include/liboceanlight/: engine.hpp  error.hpp  lol_debug_messenger.hpp  lol_device.hpp  lol_engine.hpp  lol_engine_init.hpp  lol_engine_shutdown.hpp  lol_glfw_callbacks.hpp  lol_glfw_err_callback.hpp  lol_glfw_key_callback.hpp  lol_instance.hpp  lol_utility.hpp  lol_version.hpp  lol_window.hpp  util.hpp
liboceanlight/shaders/: fragment_shader.frag  vertex_shader.vert
liboceanlight/src/: engine.cc  error.cc  lol_debug_messenger.cc  lol_device.cc  lol_engine.cc  lol_engine_init.cc  lol_engine_shutdown.cc  lol_glfw_callbacks.cc  lol_glfw_err_callback.cc  lol_glfw_key_callback.cc  lol_instance.cc  lol_utility.cc  lol_version.cc  lol_vk_resources.cc  lol_window.cc  stb_impl.cc  util.cc
liboceanlight/test/: CMakeLists.txt  lol_utility_test.cc
oceanlight/: CMakeLists.txt
oceanlight/include/: args.hpp
oceanlight/src/: args.cc  oceanlight.cc
shaders/: fragment_shader.frag  fragment_shader.spv  vertex_shader.spv
src/: CMakeLists.txt
src/liboceanlight/: CMakeLists.txt
src/liboceanlight/include/liboceanlight/: engine.hpp  error.hpp  util.hpp
src/liboceanlight/src/: engine.cc  error.cc  util.cc
src/liboceanlight/test/: CMakeLists.txt
src/oceanlight/: CMakeLists.txt  config.h.in
src/oceanlight/include/: args.hpp  engine.hpp
src/oceanlight/src/: args.cc  engine.cc  oceanlight.cc
